--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -46,4 +46,4 @@ jobs:
           git add -vA
           git config user.name "GitHub Actions"
           git config user.email "github-actions@github.com"
-          git commit -m "${COMMIT_MSG}" && git push -u origin master || echo
+          git commit -m "${COMMIT_MSG}" && git push -u origin main || echo
